# price_appartement_ETL

./: README.md  pyproject.toml
appartements/: apps.py  documents.py  models.py  mutation.py  schema.py  urls.py
appartements/DataSets/: clean_house.csv  house.csv
appartements/ETL/: extract.py  load.py  scrap.py  transform.py
appartements/migrations/: 0001_initial.py  0002_appartement_surface.py  0003_rename_condition_appartement_type.py
appartements/notebooks/: EDA projet.ipynb  projet.ipynb
my_app/: settings.py  urls.py
